--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Livvic:wght@600;700&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Mulish:wght@300;400;700&family=Open+Sans:wght@400;600;700;800&family=Patrick+Hand&family=Poppins:wght@400;600;700;800&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 <body>
+  
+    <div class="top">
+      <div class="container">
+      <div class="header">
+        <div class="header_start">
+          <img class="logo" src="./img/img1.svg" alt="logo">
+          <ul class="header_list">
+            <li class="list-item">
+              <a href="" class="list_link">
+                home
+              </a>
+            </li>
+            <li class="list-item">
+              <a href="" class="list_link">
+                about
+              </a>
+            </li>
+          </ul>
+        </div>
+        <button class="button" type="button">Contact us</button>
+      </div>
+      <div class="hero">
+        <h1 class="hero_title">Find the best <span class="talent">talent</span></h1>
+        <div class="hero_right">
+          <span class="hero_line"></span>
+          <p class="hero_txt">Finding the right people and building high performing teams can be hard. Most companies aren’t tapping into the abundance of global talent. We’re about to change that.</p>
+        </div>
+      </div>
+    </div>
+    <div class="images">
+      <img class="top_rec" src="./img/img (23).svg" alt="rectangle">
+      <img class="rec_2" src="./img/img2.svg" alt="oval">
+      <img class="rec_3" src="./img/img (22).svg" alt="rec">
+    </div>
+    <div class="images_2">
+      <img class="second_1" src="./img/img (21).svg" alt="multi-rectangles">
+      <img class="second_2" src="./img/img (20).svg" alt="cicle">
+      <img class="second_3" src="./img/Orange.svg" alt="rec">
+      <img class="second_4" src="./img/img (18).svg" alt="rec">
+      <img class="second_5" src="./img/img (17).svg" alt="rec">
+    </div>
+    </div>
+  
   
 </body>
 </html>
