--- a/index.html
+++ b/index.html
@@ -53,6 +53,120 @@
       <img class="second_5" src="./img/img (17).svg" alt="rec">
     </div>
     </div>
+    <div class="middle">
+        <div class="container">
+          <div class="middle__div">
+            <div class="middle_right">
+              <span class="hero_line middle_line"></span>
+              <h2 class="middle_title">Build & manage distributed teams like no one else.</h2>
+            </div>
+            <div class="middle_left">
+             <ul class="middle_list">
+              <li class="middle_item">
+                <img class="middle_img" src="./img/img (16).svg" alt="">
+                <div class="middle_info">
+                  <h3 class="middle_main">Experienced Individuals</h3>
+                  <p class="middle_txt">Our network is made up of highly experienced professionals who are passionate about what they do.</p>
+                </div>
+              </li>
+              <li class="middle_item">
+                <img class="middle_img" src="./img/img (15).svg" alt="">
+                <div class="middle_info">
+                  <h3 class="middle_main">Easy to Implement</h3>
+                  <p class="middle_txt">Our processes have been refined over years of implementation meaning our teams always deliver.</p>
+                </div>
+              </li>
+              <li class="middle_item">
+                <img class="middle_img" src="./img/img (14).svg" alt="">
+                <div class="middle_info">
+                  <h3 class="middle_main">Enhanced Productivity</h3>
+                  <p class="middle_txt">Our customized platform with in-built analytics helps you manage your distributed teams.</p>
+                </div>
+              </li>
+             </ul>
+            </div>
+
+          </div>
+      </div>
+      <img class="middle_image" src="./img/Group 72.svg" alt="">
+      </div>
+      <div class="third_part">
+        <div class="container">
+          <div class="third_part__div">
+<h3 class="th_part_title">Delivering real results for top companies. Some of our success stories.</h3>
+<div class="th_part_comments">
+  <div class="box">
+    <img src="./img/img (7).svg" alt="comma" class="comma"> 
+    <p class="box_info"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+    <p class="name">Kady Baker</p>
+    <em class="status">Product Manager at Bookmark</em>
+    <img src="./img/img (3).png" alt="">
+  </div>
+  <div class="box">
+    <img src="./img/img (7).svg" alt="comma" class="comma"> 
+    <p class="box_info"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+    <p class="name">Kady Baker</p>
+    <em class="status">Product Manager at Bookmark</em>
+    <img src="./img/img (3).png" alt="">
+  </div>
+  <div class="box">
+    <img src="./img/img (7).svg" alt="comma" class="comma"> 
+    <p class="box_info"> “The team perfectly fit the specialized skill set required. They focused on the most essential features helping us launch the platform eight months faster than planned.”</p>
+    <p class="name">Kady Baker</p>
+    <em class="status">Product Manager at Bookmark</em>
+    <img src="./img/img (3).png" alt="">
+  </div>
+
+</div>
+
+          </div>
+        </div>
+        <img src="./img/Group 8 Copy.svg" alt="img" class="th_part_img">
+        <img src="./img/Group 8.svg" alt="img" class="th_part_img2">
+      </div>
+      <div class="bottom">
+        <div class="container">
+          <div class="bottom__div">
+            <p class="bottom_txt">Ready to get started?</p>
+            <button class="button" type="button">Contact us</button>
+          </div>
+        </div>
+        <img class="bottom_img" src="./img/Group 88.svg" alt="">
+      </div>
+
+      <div class="very_bottom">
+        <div class="container">
+          <div class="v_bottom">
+            <div class="b_left">
+              <div class="v_left">
+                <img class="logo" src="./img/img1.svg" alt="logo">
+            <ul class="header_list">
+              <li class="list-item">
+                <a href="" class="list_link">
+                  home
+                </a>
+              </li>
+              <li class="list-item">
+                <a href="" class="list_link">
+                  about
+                </a>
+              </li>
+            </ul>
+              </div>
+          <p class="b_txt">987  Hillcrest Lane Irvine, CA California 92714 Call Us : 949-833-7432</p>
+            </div>
+            <div class="b_right">
+              <div class="b_social">
+                <a href="#"><img src="./img/Path.svg" alt=""></a>
+                <a href="#"><img src="./img/Path.svg" alt=""></a>
+                <a href="#"><img src="./img/Path.svg" alt=""></a>
+              </div>
+              <p class="very">Copyright 2020. All Rights Reserved</p>
+
+            </div>
+          </div>
+        </div>
+      </div>
   
   
 </body>
